# bitvoker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  RELEASE_NOTES.md  ai.py  config.py  config.yaml  entrypoint.sh  handler.py  pyproject.toml  pytest.ini  requirements.txt  server.py
.github/workflows/: docker-publish.yml
bitvoker/: ai.py  alert.py  api.py  auth.py  components.py  config.py  constants.py  database.py  handler.py  logger.py  matcher.py  notifier.py  refresher.py  router.py  server.py  store.py  telegram.py  ui.py  utils.py
bitvoker/static/css/: style.css
bitvoker/static/js/: script.js
bitvoker/templates/: index.html
data/: config.yaml  database.db
docker/: Dockerfile  entrypoint.sh
static/css/: style.css
static/js/: script.js
templates/: index.html
tests/: test_ai.py  test_auth.py  test_config.py  test_database.py  test_handler.py  test_matcher.py  test_notifier.py  test_router.py  test_utils.py
web/: config-overrides.js  package-lock.json  package.json
web/coverage/: clover.xml  coverage-final.json  lcov.info
web/coverage/lcov-report/: index.html
web/coverage/lcov-report/src/: App.jsx.html  index.html  index.js.html  theme.js.html
web/coverage/lcov-report/src/components/Dashboard/: Dashboard.jsx.html  index.html
web/coverage/lcov-report/src/components/Header/: Header.jsx.html  index.html
web/coverage/lcov-report/src/components/Logs/: Logs.jsx.html  index.html
web/coverage/lcov-report/src/components/Settings/: AIProvider.jsx.html  DefaultRule.jsx.html  DestinationEditor.jsx.html  DownloadConfig.jsx.html  RuleEditor.jsx.html  Settings.jsx.html  YamlEditor.jsx.html  index.html
web/public/: index.html  manifest.json
web/src/: App.css  App.js  App.jsx  App.test.jsx  theme.js
web/src/components/Dashboard/: Dashboard.jsx  NotificationTable.jsx
web/src/components/Header/: Header.jsx
web/src/components/Login/: Login.jsx
web/src/components/Logs/: Logs.jsx
web/src/components/Settings/: AIProvider.jsx  AISettings.jsx  ChannelCard.jsx  ChannelEditor.jsx  DefaultRule.jsx  DestinationEditor.jsx  DownloadConfig.jsx  RuleEditor.jsx  Settings.jsx  YamlEditor.jsx  a.txt  b.txt
