[tool.poetry]
name = "bitvoker"
version = "0.1.0"
description = "Bitvoker notification system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "bitvoker"}]

[tool.poetry.dependencies]
python = "^3.8.1"
flask = "^2.0.0"
pyyaml = "^6.0"
requests = "^2.28.0"
python-telegram-bot = "^13.0"
slack-sdk = "^3.0.0"
discord-webhook = "^1.0.0"
sqlalchemy = "^2.0.0"
openai = "^1.0.0"
meta-ai-api = "^1.2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bitvoker = "bitvoker.ui:main"
