[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bitvoker"
version = "0.1.0"
description = "bitvoker notification system"
authors = ["Rasool Fatemi <rmfatemi@gmail.com>"]
readme = "README.md"

packages = [
    { include = "bitvoker" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pyyaml = ">=6.0"
requests = ">=2.28.0"
meta-ai-api = ">=1.2.5"
uvicorn = "^0.34.2"
fastapi = "^0.115.12"

[tool.poetry.scripts]
bitvoker = "bitvoker.server:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pre-commit = "^4.2.0"
deptry = "^0.23.0"

[tool.black]
target-version = ["py311"]
preview = true
line-length = 120

[tool.ruff]
target-version = "py311"
line-length = 120
include = [
    "bitvoker/**/*.py",
    "*.py"
]
